fix: market rent case mapping logic